# ivs-proj-02

./: .gitignore  GUIDELINES.md  README.md  hodnoceni.txt  skutecnost.txt
assets/fonts/: resources.qrc
install/: clean.sh  install.sh
plan/: xotrad00_xkucik00_xskund02_xvince01_plan.txt
src/: CMakeLists.txt  Doxyfile  Makefile  calc.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/install/: clean  install
src/install/resources/: calc.desktop  control  postinst
src/mathlib/: mathlib.cpp  mathlib.h  mathlib2.cpp  mathlib2.h
src/profiling/: analysis.txt  data_10  data_100  data_1000  profiling  profiling.cpp
src/tests/: readme.md  tests.cpp
